# remits

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
design/: README.md  protocol.md
rfcs/: 00000-iterator-definition-langauge.md  00000-template.md  README.md
server/: Cargo.toml
server/src/: config.rs  main.rs  protocol.rs
src/: commands.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  parser.rs  server.rs
src/db/: errors.rs  iters.rs  logs.rs  manifest.rs  mod.rs
src/db/logs/: mod.rs  segment.rs
src/db/messagepack/: mod.rs
src/parser/: commands.rs  errors.rs  mod.rs
src/protocol/: mod.rs
src/test_util/: mod.rs
storage/src/: lib.rs
tests/: common.rs  integration_test.rs
