[package]
name = "remits"
version = "0.1.0"
authors = ["badtuple <the.legend@badtuple.me>"]
edition = "2018"
default-run = "remits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
tokio = { version = "0.2.13", features = ["full"] }
tokio-util = { version = "0.3.0", features = ["codec"] }
futures = "0.3.4"
bytes = "*"
