[package]
name = "remits"
version = "0.1.0"
authors = ["badtuple <the.legend@badtuple.me>"]
edition = "2018"
default-run = "remits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
tokio = { version = "0.2.13", features = ["full"] }
tokio-util = { version = "0.3.0", features = ["codec"] }
futures = "0.3.4"
bytes = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.4.0"
argh = "0.1.3"
colored = "1.9"
rlua_serde = "0.4.0"
serde-transcode = "1.1.0"
rlua = "0.17.0"
serde_cbor = "0.11.1"
num-traits = "0.2"
num-derive = "0.3"
clap = "2.33"
